app/styles/page.module.css
.wrapper {
  height: 100vh;
  min-height: 600px;
  display: flex;
  flex-direction: row;
  padding-top: 50px;
  padding-bottom: 50px;
  padding-left: 5%;
  padding-right: 5%;
}

.container {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  width: 50%;
}

.containerTwo {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  width: 50%;
}

.containerFull {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  width: 100%;
}

.list {
  width: 100%;
  overflow-y: auto;
  list-style-type: none;
}

.listMobileHeader {
  display: none;
}

.listFooter {
  display: flex;
  align-items: center;
  width: 100%;
}

.h1 {
  font-Weight: 200;
  font-size: 4rem
}

.h2 {
  font-Weight: 200;
  font-Size: 2rem;
}

.h3 {
  font-Weight: 200;
  font-Size: 1.25rem;
}

.appBar {
  position: fixed;
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  height: 50px;
  z-index: 1100;
}

.appBarStart,
.appBarEnd {
  height: 100%;

}

.appBarStart {
  width: 10%;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  padding-left: 10px;
}

.appBarEnd {
  width: 90%;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  padding-right: 10px;
}

.footer {
  width: 100%;
  height: 50px;
  /* position: fixed; */
  bottom: 0;
  display: flex;
  flex-direction: row;
  z-index: 900;
}

.footerStart {
  width: 30%;
  display: flex;
  /* justify-content: center; */
  align-items: center;
  padding-left: 10px;
}
 
.footerCenter {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 40%;
}

.footerCenterContent {
  display: flex;
  flex-direction: row;
}

.footerEnd {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  width: 30%;
  padding-right: 10px;
}


@media screen and (max-width: 1000px) {
  .container {
    display: none;
  }

  .containerTwo {
    width: 100%;
  }

  .footer {
    width: 100%;
    /* height: 150px; */
    /* position: fixed; */
    bottom: 0;
    display: flex;
    flex-direction: column;
    z-index: 900;
  }

  .footerStart, 
  .footerCenter,
  .footerEnd {
    width: 100%;
    height: 50px;
  }

  .footerStart {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-left: 0px;
  }
   
  .footerCenter {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  
  .footerEnd {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-right: 0px;

  }

  .listMobileHeader {
    display: flex;
    align-items: center;
    width: 100%;
  }
}

